fix hover on mobile devices

--- a/src/Styles/About/About.css
+++ b/src/Styles/About/About.css
@@ -41,9 +41,3 @@
     flex-direction: column;
     transition: all 0.5s;
 }
-.svg:hover{
-    transform: scale(1.6);
-}
-#tech-container:hover,#dev4:hover{
-    transform: scale(1.2);
-}
