--- a/src/Styles/Home/Home.css
+++ b/src/Styles/Home/Home.css
@@ -29,9 +29,3 @@
   
 }
 
-.p-field:hover{
-transform: scale(1.1);
-}
-#home-img-web:hover{
-  transform: scale(1.2);
-}
