--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -34,8 +34,14 @@ body {
     'nav projects'
     'nav contacts';
 
-    background: rgb(255,255,255);
-    background: linear-gradient(165deg, rgba(255,255,255,1) 15%, rgba(244,244,244,1) 45%, rgba(224,226,224,1) 75%, rgba(201,201,201,1) 100%);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    165deg,
+    rgba(255, 255, 255, 1) 15%,
+    rgba(244, 244, 244, 1) 45%,
+    rgba(224, 226, 224, 1) 75%,
+    rgba(201, 201, 201, 1) 100%
+  );
 }
 .darkTheme {
   background-image: linear-gradient(
@@ -53,6 +59,21 @@ body {
   position: sticky;
   top: 0;
 }
+@media (hover: hover) {
+  .svg:hover{
+    transform: scale(1.6);
+}
+#tech-container:hover,#dev4:hover{
+    transform: scale(1.2);
+}
+.p-field:hover{
+  transform: scale(1.1);
+  }
+  #home-img-web:hover{
+    transform: scale(1.2);
+  }
+}
+
 @media only screen and (max-width: 1045px) {
   .app {
     display: flex;
@@ -71,7 +92,7 @@ body {
     width: 95vw;
     font-size: 0.8rem;
   }
-  #header h1{
+  #header h1 {
     font-size: 1.8rem;
   }
   #home {
@@ -85,16 +106,14 @@ body {
     margin: auto;
     width: 85vw;
     padding: 0;
-   
   }
-  #about{
-display:flex;
-flex-direction: column;
-}
+  #about {
+    display: flex;
+    flex-direction: column;
+  }
   #about-text {
     margin: auto;
     width: 95vw;
-    
   }
   #about-container {
     display: flex;
@@ -103,24 +122,24 @@ flex-direction: column;
   }
   #tech-container {
     margin: auto;
-    width: 55vw;
-    display: none;
+    width: 95vw;
   }
   #dev4 {
-    display: none;
+    margin-top: 1em;
+    width: 65vw;
   }
   .svg {
     padding: 0;
   }
-  #projects{
+  #projects {
     display: flex;
     flex-direction: column;
   }
   #projects-section {
     display: flex;
     flex-direction: column;
-    margin-top:26em;
-    margin-left:5vw;
+    margin-top: 26em;
+    margin-left: 5vw;
     padding: 0 !important;
     inline-size: auto;
   }
@@ -130,21 +149,21 @@ flex-direction: column;
   .slideshow-container {
     max-width: 95vw;
     padding: 0 !important;
-    margin:0 !important;
+    margin: 0 !important;
     height: fit-content;
   }
-  .mySlides{
-    width:90vw;
+  .mySlides {
+    width: 90vw;
   }
   #contacts {
-    padding:0 !important;
-    margin-top:15em;
+    padding: 0 !important;
+    margin-top: 15em;
   }
   ::-webkit-scrollbar-thumb {
     background: #5a5a5a;
     border-radius: 0.4em;
   }
-  
+
   ::-webkit-scrollbar-thumb:hover {
     background: #3a3a3a;
   }
